Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.2.0 Beta1
-
Fix Version/s: 6.2.0 RC
-
Component/s: Multimedia
-
Labels:None
-
Environment:macOS 11.5 Beta on Apple Silicon if that's relevant
-
Platform/s:
-
Commits:a86d741a95c693324e47bb6ff41c2c8a747c52cd (qt/qtmultimedia/dev) 00a6e970c30cd3298e45020a7e4eb5bd60d65170 (qt/qtmultimedia/6.2)
Description
Can't use the Video type because of a wrong internal property alias:
qrc:/qt-project.org/imports/QtMultimedia/Video.qml:142:42: Invalid alias target location: flushMode
Attachments
For Gerrit Dashboard: QTBUG-95133 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
366278,3 | Fix the Video QML element and smaller cleanups in VideoOutput | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
366319,2 | Fix the Video QML element and smaller cleanups in VideoOutput | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |