Fix the Video QML element and smaller cleanups in VideoOutput

Remove the flush mode from VideoOutput, we should always show
an empty frame when playback is stopped.

Fix the QML Video element and remove API that we do not support
anymore. Adjust some other parts to work correctly after API
changes in the MediaPlayer and VideoOutput elements.

Fixes: QTBUG-95133
Change-Id: Idf93810665f1b329ef264f59f761188e8056d755
Reviewed-by: André de la Rocha <andre.rocha@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit a86d741a95c693324e47bb6ff41c2c8a747c52cd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>